# drawio_pysd

./: .gitignore  README.md  equations_parsing.py  js_variables.txt  parse_drawio.py  parse_xml.py  plot.py  pyproject.toml  pysd.js  pysd_to_drawio.py  teacup.abstactmodel.txt  teacup.drawio  teacup.drawio.py  teacup.drawio.xml  vensim_to_abs.py  vis_model.ipynb
drawio_pysd/: __init__.py  custom_asts.py  equations_parsing.py
examples/: ghg.drawio  ghg_abstract.py  greenhouse.drawio  greenhouse.py  mechanics.drawio  mechanics.drawio.xml  population.drawio  subscripts.abstractmodel  subscripts.abstractmodel.txt  teacup.abstactmodel.txt  teacup.drawio  teacup.drawio.abs  teacup.drawio.xml
