[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio_pysd"
version = "0.0.1"
authors = [
  { name="Lionel 42", email="author@example.com" },
]
description = "Drawio Pysd, converts drawio models to pysd models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ScienceGamez/drawio_pysd"

